    - move journald to separate module journal;
    - move journal tests to separate module journal;
    - move libjournal-core to separate module journal;
    - move libjournal-internal to separate module journal;
    - move journald.conf to separate module journal;
    - move libjournal to separate module journal;
    - move journal tmpfiles to separate module journal;
 * sd-messages.h:
    - remove unused id SD_MESSAGE_MACHINE_START;
    - remove unused id SD_MESSAGE_MACHINE_STOP;
    - remove unused id SD_MESSAGE_TIMEZONE_CHANGE;
    - move id's SD_MESSAGE_JOURNAL_* to separate module journal;
 * coredump:
    - move coredump sysctl config to separate module journal;
    - move coredump man pages to separate module journal;
    - move coredump completions to separate module journal;
    - move systemd-coredumpctl to separate module journal;
    - move systemd-coredump to separate module journal;
    - remove support;
 * systemctl:
    - remove output argument option;
    - don't show unit logs;
    - remove libsystemd-logs library;
 * remove libsystemd-logs library;
 * remove bootchart support;
 * unit:
    - don't check running state journald on unit notify;
    - remove journald socket init dependency;
 
   systemd (214.2)
~~~~~~~
 * fix quote udev rule;
 * journalctl:
    - remove qrencode support;
 * journal:
    - rename libsystemd-journal.pc to journal.pc;
    - use name journal instead of systemd in journal.pc;
    - rename libsystemd-journal.sym to journal.sym;
    - use abi prefix JOURNAL instead of LIBSYSTEMD_JOURNAL in journal.sym;
    - rename unit systemd-journald.socket to journald.socket;
    - rename unit systemd-journald.service to journald.service;
    - rename systemd-journald to journald;
    - rename system group systemd-journal to journal;
    - rename unit systemd-journal-flush.service to journal-flush.service;
    - rename library libsystemd-journal.so to journal.so;
    - rename man systemd.journal-fields to journal-fields;